add more doc and update base crud
