# app/Doc/Auth/LoginController.php
@@ -1,8 +1,10 @@
 <?php
+
 namespace App\Doc\Auth;
+
 /**
  * @OA\Parameter(
- *   parameter="AuthLogin_email",
+ *   parameter="ApiLoginRequest_email",
  *   name="email",
  *   @OA\Schema(
  *     type="string"
@@ -11,7 +13,7 @@ namespace App\Doc\Auth;
  *   required=true
  * )
  * @OA\Parameter(
- *   parameter="AuthLogin_password",
+ *   parameter="ApiLoginRequest_password",
  *   name="password",
  *   @OA\Schema(
  *     type="string"
@@ -23,12 +25,18 @@ namespace App\Doc\Auth;
  * @OA\Post(
  * path="/api/v1/auth/login", 
  * tags={"Auth"},
- *   @OA\Parameter(ref="#/components/parameters/AuthLogin_email"),
- *   @OA\Parameter(ref="#/components/parameters/AuthLogin_password"),
+ *   @OA\Parameter(ref="#/components/parameters/ApiLoginRequest_email"),
+ *   @OA\Parameter(ref="#/components/parameters/ApiLoginRequest_password"),
+ * @OA\Response(response=200, description="", @OA\JsonContent()),
+ * )
+ * 
+ * @OA\Get(
+ * path="/api/v1/auth/logout", 
+ * tags={"Auth"},
  * @OA\Response(response=200, description="", @OA\JsonContent()),
  * )
  */
 
- class LoginController{
-
- }
+class LoginController
+{
+}
