# app/Doc/Profile/ChangeAvatarController.php
@@ -1,0 +1,18 @@
+<?php
+
+namespace App\Doc\Profile;
+
+/**
+ 
+ * 
+ * @OA\Post(
+ * path="/api/v1/user/change-avatar", 
+ * tags={"Profile"},
+ * @OA\Parameter(ref="#/components/parameters/OA_Relations"),
+ * @OA\Response(response=200, description="", @OA\JsonContent()),
+ * )
+ */
+
+class ChangeAvatarController
+{
+}
