# app/Doc/Profile/ChangeProfileController.php
@@ -1,0 +1,17 @@
+<?php
+
+namespace App\Doc\Profile;
+
+/**
+ * 
+ * @OA\Post(
+ * path="/api/v1/user/change-profile", 
+ * tags={"Profile"},
+ * @OA\Parameter(ref="#/components/parameters/OA_Relations"),
+ * @OA\Response(response=200, description="", @OA\JsonContent()),
+ * )
+ */
+
+class ChangeProfileController
+{
+}
