# app/Doc/Profile/ProfileController.php
@@ -1,0 +1,18 @@
+<?php
+
+namespace App\Doc\Profile;
+
+/**
+ 
+ * 
+ * @OA\Get(
+ * path="/api/v1/user", 
+ * tags={"Profile"},
+ * @OA\Parameter(ref="#/components/parameters/OA_Relations"),
+ * @OA\Response(response=200, description="", @OA\JsonContent()),
+ * )
+ */
+
+class ProfileController
+{
+}
